--- a/wallet/pom.xml
+++ b/wallet/pom.xml
@@ -6,7 +6,7 @@
 
 	<artifactId>wallet</artifactId>
 	<packaging>apk</packaging>
-	<version>1.09</version>
+	<version>1.091</version>
 	<name>Bbqcoin Wallet</name>
 
 	<parent>
@@ -53,7 +53,7 @@
 		<dependency>
 			<groupId>com.google</groupId>
 			<artifactId>bbqcoinj</artifactId>
-			<version>0.81-SNAPSHOT</version>
+			<version>0.82-SNAPSHOT</version>
 		</dependency>
 
 		<!-- de.schildbach.wallet.bbqcoin.integration.android.* -->
@@ -149,33 +149,37 @@
 					</excludes>
 				</configuration>
 			</plugin>
-			 <plugin>
-			    <groupId>org.apache.maven.plugins</groupId>
-			    <artifactId>maven-jarsigner-plugin</artifactId>
-			    <executions>
-				<execution>
-				    <id>signing</id>
-				    <goals>
-					<goal>sign</goal>
-					<goal>verify</goal>
-				    </goals>
-				    <phase>package</phase>
-				    <inherited>true</inherited>
-				    <configuration>
-					<removeExistingSignatures>true</removeExistingSignatures>
-					<archiveDirectory/>
-					<includes>
-					    <include>${project.build.directory}/${project.artifactId}.apk</include>
-					</includes>
-					<keystore>${sign.keystore}</keystore>
-					<alias>${sign.alias}</alias>
-					<storepass>${sign.storepass}</storepass>
-					<keypass>${sign.keypass}</keypass>
-					<verbose>true</verbose>
-				    </configuration>
-				</execution>
-			    </executions>
-			</plugin>
+             <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jarsigner-plugin</artifactId>
+                <executions>
+                <execution>
+                    <id>signing</id>
+                    <goals>
+                    <goal>sign</goal>
+                    <goal>verify</goal>
+                    </goals>
+                    <phase>package</phase>
+                    <inherited>true</inherited>
+                    <configuration>
+                        <arguments>
+                          <argument>-sigalg</argument><argument>MD5withRSA</argument>
+                          <argument>-digestalg</argument><argument>SHA1</argument>
+                        </arguments>
+                        <removeExistingSignatures>true</removeExistingSignatures>
+                        <archiveDirectory/>
+                        <includes>
+                            <include>${project.build.directory}/${project.artifactId}.apk</include>
+                        </includes>
+                        <keystore>${sign.keystore}</keystore>
+                        <alias>${sign.alias}</alias>
+                        <storepass>${sign.storepass}</storepass>
+                        <keypass>${sign.keypass}</keypass>
+                        <verbose>true</verbose>
+                    </configuration>
+                </execution>
+                </executions>
+            </plugin>
 			<!-- the signed apk then needs to be zipaligned -->
 			<plugin>
 			    <groupId>com.jayway.maven.plugins.android.generation2</groupId>
